# workstyle-memory-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SETUP.md  pyproject.toml
docs/: integrations.md  non_goals.md  positioning.md  real_usage_and_failure_modes.md  tencentdb_agent_memory_reference.md  trial_guide.md  wasc_scoring_map.md
memory_bridge/: __init__.py  cli.py  context_builder.py  deletion_verifier.py  diagnostics.py  doctor.py  exporters.py  extractor.py  mcp_server.py  memory_control.py  resolver.py  scenario.py  schemas.py  store.py
policies/: no_heuristic_extraction.md
scripts/: demo_8_steps.sh
skill/: SKILL.md
skill/scripts/: demo_8_steps.sh
tests/: test_context_and_delete.py  test_context_request_log.py  test_context_truncation.py  test_deletion_verification.py  test_doctor_hygiene_host.py  test_dry_run_preview.py  test_export_global_only.py  test_extraction_context.py  test_load_json_argument.py  test_memory_control_preview.py  test_memory_lifecycle.py  test_no_heuristic_extraction_policy.py  test_positioning_docs.py  test_recall_health.py  test_scenario_playbook.py  test_scope_hint.py  test_server_instructions.py  test_traceability.py  test_unmatched_scope_hint.py
