[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workstyle-memory-bridge"
version = "0.3.0"
description = "A lightweight traceable Workstyle Memory Governance MCP/CLI for Claude, Codex, MCP, and product assistants."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "BruceLi"}]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
memory-bridge = "memory_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["memory_bridge*"]
